--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version:"${springVersion}"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.47'
+    compile group: 'org.hamcrest', name: 'hamcrest-library', version:'1.3'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.2.1.Final'
     
 }
 
